src/objects/Apttus__QueryTemplateFilter__c.object
<CustomObject>
    <description>Filter expression used in a query</description>
    <fields>
        <fullName>Apttus__BooOper__c</fullName>
        <description>Logical operator for combining multiple field expressions in a query</description>
        <label>Boolean Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AND</fullName>
                    <default>true</default>
                    <label>AND</label>
                </value>
                <value>
                    <fullName>OR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__CompOper__c</fullName>
        <description>Comparison operator for a field expression in a query</description>
        <label>Comparison Operator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>equal to</fullName>
                    <default>true</default>
                    <label>equal to</label>
                </value>
                <value>
                    <fullName>not equal to</fullName>
                </value>
                <value>
                    <fullName>less than</fullName>
                </value>
                <value>
                    <fullName>less than or equal to</fullName>
                </value>
                <value>
                    <fullName>greater than</fullName>
                </value>
                <value>
                    <fullName>greater than or equal to</fullName>
                </value>
                <value>
                    <fullName>in</fullName>
                </value>
                <value>
                    <fullName>not in</fullName>
                </value>
                <value>
                    <fullName>like</fullName>
                </value>
                <value>
                    <fullName>not like</fullName>
                </value>
                <value>
                    <fullName>includes</fullName>
                </value>
                <value>
                    <fullName>excludes</fullName>
                </value>
                <value>
                    <fullName>starts with</fullName>
                </value>
                <value>
                    <fullName>contains</fullName>
                </value>
                <value>
                    <fullName>does not contain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Field__c</fullName>
        <description>The name of a field in the specified object.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>The name of a field in the specified object.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__QueryTemplate__c</fullName>
        <description>The associated query template</description>
        <inlineHelpText>The associated query template</inlineHelpText>
        <label>Query Template</label>
        <referenceTo>Apttus__QueryTemplate__c</referenceTo>
        <relationshipLabel>Filters</relationshipLabel>
        <relationshipName>QueryTemplateFilters</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__Sequence__c</fullName>
        <description>Filter sequence</description>
        <inlineHelpText>Filter sequence</inlineHelpText>
        <label>Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__Value__c</fullName>
        <description>A value used to compare with the value in field in a query</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Query Template Filter</label>
    <nameField>
        <displayFormat>QTF-{0000000}</displayFormat>
        <label>Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Query Template Filters</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>